--- a/src/route/Home.scss
+++ b/src/route/Home.scss
@@ -1,6 +1,10 @@
 .home_body{
-    background-color: rgb(207, 244, 250);
+    background-color: rgb(243, 244, 244);
     width: 59%;
     margin-top: 1%;
     
+}
+.dropdown_menu{
+    position: absolute;
+    right: 25%;
 }
