--- a/src/route/Home.scss
+++ b/src/route/Home.scss
@@ -1,33 +1,61 @@
 .home_body {
     background-color: rgb(243, 244, 244);
-    width: 59%;
+    width: 70%;
     margin-top: 1%;
-
+    align-items: baseline;
 }
 
 .dropdown_menu {
     position: absolute;
-    right: 25%;
+    right: 5%;
+    margin: 0%;
+    padding: auto;
 }
 
 .posting_box {
     background-color: antiquewhite;
     margin: 4%;
+    width: 93%;
+    height: 45%;
 }
 
 .profile_box {
     display: flex;
     padding: 3%;
-
+    justify-content: space-between;
+    align-items: center; /* Center vertically */
 }
 
 .profile_img {
-    width: 50px;
+    width: 60px;
     height: 50px;
     border-radius: 70%;
     overflow: hidden;
-
     object-fit: cover;
 }
 
 .profile_name {}
+
+.IT_NEWS {
+    float: left;
+}
+
+.img_post {
+    width: 20%;
+    height: 12%;
+}
+
+.time_and_img {
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: flex-end; /* Align items to the right */
+}
+
+.profile_img_and_name {
+    display: flex;
+    align-items: center; /* Center vertically */
+}
+.title_div{
+    margin : 3%;
+}
