--- a/src/Account/Account.scss
+++ b/src/Account/Account.scss
@@ -7,7 +7,7 @@
   
     .profile {
         width: 100%;
-        max-width: 600px;
+        // max-width: 600px;
         background: #fff;
         margin-bottom: 20px;
         
