--- a/src/route/Home.scss
+++ b/src/route/Home.scss
@@ -16,14 +16,16 @@
     background-color: antiquewhite;
     margin: 4%;
     width: 93%;
-    height: 45%;
+    height: 40%;
 }
 
 .profile_box {
     display: flex;
-    padding: 3%;
+    padding: 1%;
     justify-content: space-between;
     align-items: center; /* Center vertically */
+    //background-color: azure;
+    height: 27%;
 }
 
 .profile_img {
@@ -42,20 +44,41 @@
 
 .img_post {
     width: 20%;
-    height: 12%;
+    height: 20%;
+    //position: absolute;
+
 }
 
-.time_and_img {
-    display: flex;
-    width: 100%;
-    height: 100%;
-    justify-content: flex-end; /* Align items to the right */
-}
+
 
 .profile_img_and_name {
     display: flex;
     align-items: center; /* Center vertically */
+    width: 80%;
+    margin:1%;
+    
+    //background-color: rgb(141, 141, 37);
 }
 .title_div{
-    margin : 3%;
+    margin : 0%;
+    display: flex;
+    justify-content: space-between;
+    //background-color: aqua;
+    padding: 1%;
+}
+
+.board_title{
+//background-color: aliceblue;
+margin: 2%;
+justify-content: space-between;
+}
+.likes_and_comment{
+    width: 50%;
+    display: flex;
+    
+
+    margin :10%;
+    justify-content: space-between;
+    
+    //background-color: aqua;
 }
