--- a/src/route/Home.scss
+++ b/src/route/Home.scss
@@ -1,7 +1,7 @@
 .home_body {
     background-color: rgb(243, 244, 244);
     width: 70%;
-    margin-top: 1%;
+    margin: 1%;
     align-items: baseline;
 }
 
