--- a/src/fixed_component/Side_bar.scss
+++ b/src/fixed_component/Side_bar.scss
@@ -4,7 +4,7 @@
 }
 
 .Recent_TableContainer {
-    background-color: beige;
+    
     margin-top: 10px;
     width: 100%;
     padding: 5px;
@@ -14,6 +14,8 @@
 .tableRow {
     display: flex;
     justify-content: space-between;
+    width: 100%;
+    
 }
 
 .forum_title {
@@ -72,4 +74,8 @@ li {
 .side_bar .forum_button {
     color: black;
     text-decoration: none;
+}
+.table_cell{
+    //제목 있는 곳
+    
 }
