--- a/src/route/Home.scss
+++ b/src/route/Home.scss
@@ -1,7 +1,8 @@
 .home_body {
     background-color: rgb(243, 244, 244);
-    width: 70%;
-    margin: 1%;
+    max-width: 75%;
+    width: 75%;
+    margin-top: 0.5%;
     align-items: baseline;
 }
 
@@ -12,18 +13,25 @@
     padding: auto;
 }
 
+
+
 .posting_box {
-    background-color: antiquewhite;
-    margin: 4%;
-    width: 93%;
-    height: 40%;
+  display: flex;
+  flex-direction: column; /* Change the flex direction to column */
+  background-color: rgb(214, 225, 234);
+  margin: 4%;
+  width: 93%;
+  max-width: 93%;
+  height: auto; /* Adjust height to accommodate content */
+  justify-content: space-between; /* Align items with space-between */
 }
 
 .profile_box {
     display: flex;
     padding: 1%;
     justify-content: space-between;
-    align-items: center; /* Center vertically */
+    align-items: center;
+    /* Center vertically */
     //background-color: azure;
     height: 27%;
 }
@@ -43,42 +51,61 @@
 }
 
 .img_post {
-    width: 20%;
-    height: 20%;
+    width: 120px;
+    max-width: 120px;
+    height: 80px;
     //position: absolute;
-
+    margin-right: 3%;
 }
 
 
 
 .profile_img_and_name {
     display: flex;
-    align-items: center; /* Center vertically */
+    align-items: center;
+    /* Center vertically */
     width: 80%;
-    margin:1%;
-    
+    margin: 1%;
+
     //background-color: rgb(141, 141, 37);
 }
-.title_div{
-    margin : 0%;
+
+.title_div {
+    margin: 0%;
+    //height: 100px;
+    max-width: 100%;
     display: flex;
     justify-content: space-between;
     //background-color: aqua;
-    padding: 1%;
+    padding-left: 3%;
 }
 
-.board_title{
-//background-color: aliceblue;
-margin: 2%;
-justify-content: space-between;
-}
-.likes_and_comment{
-    width: 50%;
-    display: flex;
-    
-
-    margin :10%;
+.board_title {
+    align-items: center;
+    //background-color: aliceblue;
+    //margin-bottom: 8%;
     justify-content: space-between;
-    
+    //padding-bottom: 12%;
+    max-width: 100%;
+    //bottom: 1%;
+}
+
+.board_title_and_likes {
+    //background-color: red;
+    margin-top: 3%;
+    align-items: center;
+    max-width: 80%;
+}
+
+.likes_and_comment {
+    width: 40%;
+    display: flex;
+
+
+    margin: 0%;
+    justify-content: space-between;
+
     //background-color: aqua;
+    margin-bottom: 1%;
+    padding-top: 3%;
 }
