--- a/src/Account/MyPage.scss
+++ b/src/Account/MyPage.scss
@@ -33,12 +33,13 @@
                 text-align: center;
             }
 
-            // .settings-icon {
-            //     width: 50px;
-            //     height: 50px;
-            //     // background: #ccc;
-            //     // border-radius: 50%;
-            // }
+            .settings-icon {
+                cursor: pointer;
+                // width: 50px;
+                // height: 50px;
+                // background: #ccc;
+                // border-radius: 50%;
+            }
         }
 
         .navigation ul {
