--- a/src/Account/Join_Login.scss
+++ b/src/Account/Join_Login.scss
@@ -1,6 +1,3 @@
-// input {
-//   width: 200px;
-// }
 p {
   color: red;
 }
@@ -12,7 +9,7 @@ p {
   align-items: center;
   height: 100dvh;
   padding: 20px;
-  width: 100%; 
+  width: 100%;
 
   h1 {
     color: #5d7096;
@@ -27,7 +24,7 @@ p {
     width: 100%;
     max-width: 400px;
 
-    .ID_form_align,
+    .email_form_align,
     .PW_form_align {
       display: flex;
       flex-direction: column;
@@ -35,21 +32,20 @@ p {
 
       label {
         margin-bottom: 5px;
-        color: #bdc3c7; 
+        color: #bdc3c7;
       }
 
       input {
         padding: 10px;
-        border: 1px solid #95a5a6; 
-        background-color: #ecf0f1; 
+        border: 1px solid #95a5a6;
+        background-color: #ecf0f1;
         border-radius: 4px;
         font-size: 16px;
-        color: #2c3e50; 
-        
+        color: #2c3e50;
 
         &:focus {
           outline: none;
-          border-color: #7f8c8d; 
+          border-color: #7f8c8d;
         }
       }
     }
@@ -60,25 +56,24 @@ p {
       font-size: 18px;
       border: none;
       border-radius: 4px;
-      background: #16a085; 
-      color: #ecf0f1; 
+      background: #16a085;
+      color: #ecf0f1;
       cursor: pointer;
       transition: background-color 0.3s, color 0.3s;
 
       &:hover {
-        background-color: #1abc9c; 
-        color: #2c3e50; 
+        background-color: #1abc9c;
+        color: #2c3e50;
       }
     }
 
     .msg {
-      color: #e74c3c; 
+      color: #e74c3c;
       text-align: center;
       margin-top: 20px;
     }
   }
 }
-
 
 //조인
 
@@ -88,19 +83,19 @@ p {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  // background: #4A5D73; 
-  color: #E0E1DD; 
+  // background: #4A5D73;
+  color: #e0e1dd;
   font-family: 'Arial', sans-serif;
-  width: 100%; 
+  width: 100%;
 
   h1 {
-    color: #5d7096; 
+    color: #5d7096;
     margin-bottom: 2rem;
   }
 
   .join_form {
     background: #34495e;
-    // background: #7C90A0; 
+    // background: #7C90A0;
     padding: 2rem;
     border-radius: 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
@@ -119,62 +114,61 @@ p {
         width: calc(100% - 2rem);
         padding: 0.5rem;
         margin-bottom: 0.5rem;
-        border: 1px solid #5E7480; 
+        border: 1px solid #5e7480;
         border-radius: 4px;
         font-size: 1rem;
-        color: #0D1B2A; 
+        color: #0d1b2a;
 
         &:focus {
           outline: none;
-          border-color: #354259; 
+          border-color: #354259;
         }
 
         &::placeholder {
-          color: #B9C6D3; 
+          color: #b9c6d3;
         }
 
-        &[type="date"] {
+        &[type='date'] {
           color: #354259;
         }
       }
 
-      .email_button{
+      .email_button {
         padding: 0.5rem 1rem;
-        background: #354259; 
-        color: #E0E1DD; 
+        background: #354259;
+        color: #e0e1dd;
         border: none;
         border-radius: 4px;
         cursor: pointer;
         transition: background 0.3s ease;
 
         &:hover {
-          background: #5E7480; 
+          background: #5e7480;
         }
       }
 
-      .join_button{
+      .join_button {
         padding: 0.5rem 1rem;
-        background: #16a085; 
-        color: #E0E1DD; 
+        background: #16a085;
+        color: #e0e1dd;
         border: none;
         border-radius: 4px;
         cursor: pointer;
         transition: background 0.3s ease;
 
         &:hover {
-          background: #5E7480; 
+          background: #5e7480;
         }
-
       }
 
       .visible_icon {
         margin-left: 0.5rem;
-        color: #E0E1DD; 
+        color: #e0e1dd;
         cursor: pointer;
       }
 
       .message {
-        color: #E0E1DD; 
+        color: #e0e1dd;
         font-size: 0.85rem;
       }
     }
